--- a/client/requirements.txt
+++ b/client/requirements.txt
@@ -55,6 +55,7 @@ python-engineio==4.3.2
 python-socketio==5.6.0
 six==1.16.0
 Werkzeug==2.2.2
+pika==1.3.2
 
 ###################################### Not working
 # networkx==3.3
@@ -62,4 +63,3 @@ Werkzeug==2.2.2
 # numpy==1.26.4
 # torchvision==0.17.2
 # torch==2.2.2
-
