--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,6 +2,16 @@ version: '3.8'
 
 services:
 
+  rabbitmq:
+    image: rabbitmq:management
+    container_name: rabbitmq
+    # restart: always
+    environment:
+      - RABBITMQ_DEFAULT_USER=guest
+      - RABBITMQ_DEFAULT_PASS=guest
+    ports:
+      - "5672:5672"  # RabbitMQ default port
+      - "15672:15672"  # RabbitMQ management UI port
   # Client
   plate-detection-client:
     # image: my_yolov822:latest
@@ -9,9 +19,11 @@ services:
       context: ./client
       dockerfile: ./Dockerfile
     image: plate-detection:latest
+    container_name: plate-detection
     # restart: always
     depends_on:
       - camera-service-server
+      - rabbitmq
     volumes:
       - D:/gRPC-Yolov8-microservices/client/saved_images:/code/saved_images
       - D:/gRPC-Yolov8-microservices/client/my_yolo_v8/outputs:/code/my_yolo_v8/outputs
@@ -23,6 +35,7 @@ services:
       context: ./server
       dockerfile: ./Dockerfile
     image: camera-service:latest
+    container_name: camera-service
     # restart: always
     volumes:
       - D:/gRPC-Yolov8-microservices/server/saved_images:/code/saved_images
@@ -35,7 +48,7 @@ services:
     # devices:
     #   - /dev/video0:/dev/video0  # Map the camera device
 
-
+  
 
 # volumes:
 #   plate-detection-client:
