working on producer rabbitmq service

--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -2,6 +2,10 @@ FROM jjanzic/docker-python3-opencv
 
 WORKDIR /code
 
+# Without this setting, Python never prints anything out.
+ENV PYTHONUNBUFFERED=1
+
+
 EXPOSE 50051
 
 COPY ./app.py /code/
