--- a/client/requirements.txt
+++ b/client/requirements.txt
@@ -57,6 +57,11 @@ six==1.16.0
 Werkzeug==2.2.2
 pika==1.3.2
 
+blinker==1.7.0
+colorama==0.4.6
+packaging==23.2
+SQLAlchemy==2.0.25
+typing_extensions==4.9.0
 ###################################### Not working
 # networkx==3.3
 # ultralytics==8.2.2
