--- a/server/requirements.txt
+++ b/server/requirements.txt
@@ -3,5 +3,25 @@ grpcio-tools==1.62.2
 numpy==1.26.4
 protobuf==4.25.0
 # opencv-python==4.9.0.80
+########################################
+# For flask
+Flask==2.2.5
+Flask-Cors==3.0.10
+Flask-SocketIO==5.2.0
+greenlet==1.1.2
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.1
+python-engineio==4.3.2
+python-socketio==5.6.0
+SQLAlchemy==2.0.25
+six==1.16.0
+Werkzeug==2.2.2
+pika==1.3.2
+blinker==1.7.0
+colorama==0.4.6
+packaging==23.2
+SQLAlchemy==2.0.25
+typing_extensions==4.9.0
 #######################################
 # opencv-python==4.8.0.74
