--- a/client/requirements.txt
+++ b/client/requirements.txt
@@ -9,8 +9,8 @@ arabic-reshaper==3.0.0
 # filelock==3.13.4
 # fonttools==4.51.0
 # fsspec==2024.3.1
-# grpcio==1.62.2
-# grpcio-tools==1.62.2
+grpcio==1.62.2
+grpcio-tools==1.62.2
 # idna==3.7
 # Jinja2==3.1.3
 # kiwisolver==1.4.5
