--- a/camera_webapp/requirements.txt
+++ b/camera_webapp/requirements.txt
@@ -7,6 +7,7 @@ greenlet==3.0.3
 itsdangerous==2.2.0
 Jinja2==3.1.4
 MarkupSafe==2.1.5
+psycopg2-binary==2.9.9
 python-dotenv==1.0.1
 SQLAlchemy==2.0.25
 typing_extensions==4.11.0
