--- a/client/requirements.txt
+++ b/client/requirements.txt
@@ -19,7 +19,7 @@ grpcio-tools==1.62.2
 # mpmath==1.3.0
 # packaging==24.0
 # pandas==2.2.2
-# pillow==10.3.0
+pillow==10.3.0
 # protobuf==4.25.3
 # psutil==5.9.8
 # py-cpuinfo==9.0.0
