--- a/plate_detection_service/requirements.txt
+++ b/plate_detection_service/requirements.txt
@@ -1,3 +1,4 @@
+arabic-reshaper==3.0.0
 bidict==0.23.1
 blinker==1.7.0
 certifi==2024.2.2
@@ -38,6 +39,7 @@ psutil==5.9.8
 psycopg2==2.9.9
 py-cpuinfo==9.0.0
 pyparsing==3.1.2
+python-bidi==0.4.2
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 python-engineio==4.3.2
