--- a/plate_detection_service/requirements.txt
+++ b/plate_detection_service/requirements.txt
@@ -1,52 +1,14 @@
 ###################################### working
 arabic-reshaper==3.0.0
-# certifi==2024.2.2
-# charset-normalizer==3.3.2
-# colorama==0.4.6
-# contourpy==1.2.1
-# opencv-python==4.9.0.80
-# cycler==0.12.1
-# filelock==3.13.4
-# fonttools==4.51.0
-# fsspec==2024.3.1
 grpcio==1.62.2
 grpcio-tools==1.62.2
-# idna==3.7
-# Jinja2==3.1.3
-# kiwisolver==1.4.5
-# MarkupSafe==2.1.5
-# matplotlib==3.8.4
-# mpmath==1.3.0
-# packaging==24.0
-# pandas==2.2.2
 pillow==10.3.0
-# protobuf==4.25.3
-# psutil==5.9.8
-# py-cpuinfo==9.0.0
-# pyparsing==3.1.2
 python-bidi==0.4.2
-# python-dateutil==2.9.0.post0
-# pytz==2024.1
-# PyYAML==6.0.1
-# requests==2.31.0
-# scipy==1.13.0
-# seaborn==0.13.2
-# six==1.16.0
-# sympy==1.12
-# thop==0.1.1.post2209072238
-# tqdm==4.66.2
-# typing_extensions==4.11.0
-# tzdata==2024.1
-# urllib3==2.2.1
-###################################### For Flask
+redis==5.0.4
 bidict==0.22.0
 click==8.1.3
 dnspython==2.2.1
 eventlet==0.33.1
-# Flask==2.1.2
-Flask==2.2.5
-Flask-Cors==3.0.10
-Flask-SocketIO==5.2.0
 greenlet==1.1.2
 itsdangerous==2.1.2
 Jinja2==3.1.2
@@ -57,15 +19,78 @@ python-socketio==5.6.0
 six==1.16.0
 Werkzeug==2.2.2
 pika==1.3.2
-
 blinker==1.7.0
 colorama==0.4.6
 packaging==23.2
 SQLAlchemy==2.0.25
 typing_extensions==4.9.0
-###################################### Not working
+
+################################################################
+# arabic-reshaper==3.0.0
+# bidict==0.23.1
+# blinker==1.7.0
+# certifi==2024.2.2
+# charset-normalizer==3.3.2
+# click==8.1.7
+# colorama==0.4.6
+# contourpy==1.2.1
+# cycler==0.12.1
+# filelock==3.14.0
+# Flask==2.2.5
+# Flask-Cors==3.0.10
+# Flask-SocketIO==5.2.0
+# Flask-SQLAlchemy==3.1.1
+# fonttools==4.51.0
+# fsspec==2024.5.0
+# greenlet==3.0.3
+# grpcio==1.62.2
+# grpcio-tools==1.62.2
+# h11==0.14.0
+# idna==3.7
+# intel-openmp==2021.4.0
+# itsdangerous==2.1.2
+# Jinja2==3.1.2
+# kiwisolver==1.4.5
+# MarkupSafe==2.1.1
+# matplotlib==3.9.0
+# mkl==2021.4.0
+# mpmath==1.3.0
 # networkx==3.3
-# ultralytics==8.2.2
 # numpy==1.26.4
-# torchvision==0.17.2
-# torch==2.2.2
+# opencv-python==4.9.0.80
+# packaging==23.2
+# pandas==2.2.2
+# pika==1.3.2
+# pillow==10.3.0
+# protobuf==4.25.0
+# psutil==5.9.8
+# psycopg2==2.9.9
+# py-cpuinfo==9.0.0
+# pyparsing==3.1.2
+# python-bidi==0.4.2
+# python-dateutil==2.9.0.post0
+# python-dotenv==1.0.1
+# python-engineio==4.3.2
+# python-socketio==5.6.0
+# pytz==2024.1
+# PyYAML==6.0.1
+# redis==5.0.4
+# requests==2.32.1
+# scipy==1.13.0
+# seaborn==0.13.2
+# setuptools==69.5.1
+# simple-websocket==1.0.0
+# six==1.16.0
+# SQLAlchemy==2.0.25
+# sympy==1.12
+# tbb==2021.12.0
+# thop==0.1.1.post2209072238
+# torch==2.3.0
+# torchvision==0.18.0
+# tqdm==4.66.4
+# typing_extensions==4.9.0
+# tzdata==2024.1
+# ultralytics==8.2.2
+# urllib3==2.2.1
+# Werkzeug==2.2.2
+# wsproto==1.2.0
