--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,29 +2,30 @@ version: '3.8'
 
 services:
 ####################################### 
-  # db:
-  #   image: postgres:alpine
-  #   environment:
-  #     POSTGRES_PASSWORD: mysecretpassword
-  #   volumes:
-  #     - D:/gRPC-Yolov8-microservices/postgres-data:/var/lib/postgresql/data
-  #   ports:
-  #     - "5432:5432"
-# ###########################################
-  # pgadmin:
-  #   image: dpage/pgadmin4
-  #   environment:
-  #     PGADMIN_DEFAULT_EMAIL: barzansaeedpour@gmail.com
-  #     PGADMIN_DEFAULT_PASSWORD: root
-  #   ports:
-  #     - "8080:80"
+  db:
+    image: postgres:alpine
+    environment:
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_USER: postgres
+    volumes:
+      - D:/gRPC-Yolov8-microservices/postgres-data:/var/lib/postgresql/data
+    ports:
+      - "5432:5432"
+###########################################
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: barzansaeedpour@gmail.com
+      PGADMIN_DEFAULT_PASSWORD: postgres
+    ports:
+      - "8080:80"
 ###########################################
   camera_webapp:
     build: 
       context: ./camera_webapp
       dockerfile: ./Dockerfile
     image: camera_webapp:latest
-    container_name: camera_webapp
+    container_name: camera_webapp_original
     # depends_on:
     #   - db
     environment:
@@ -35,7 +36,7 @@ services:
         # server_grpc_channel_address : "0.0.0.0:81"
         debug: True
         postgresql_user: 'postgres'
-        postgresql_password: 'mysecretpassword'
+        postgresql_password: 'postgres'
     ports:
       - "5000:5000"
     
